Commit Formularis LlibresAndreuFurio

--- a/public/css/estils.css
+++ b/public/css/estils.css
@@ -23,3 +23,35 @@ h3 {
   color: gray;
   font-weight: bold;
 }
+
+.modificarimg {
+  width: 25px;
+  height: 25px;
+  margin-left: 10px;
+}
+
+.navbar {
+  overflow: hidden;
+  background-color: #333;
+  position: fixed; /* Set the navbar to fixed position */
+  top: 0; /* Position the navbar at the top of the page */
+  width: 100%; /* Full width */
+}
+
+.navbar a {
+  float: left;
+  display: block;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+.navbar a:hover {
+  background: #ddd;
+  color: black;
+}
+
+.main {
+  margin-top: 30px; /* Add a top margin to avoid content overlay */
+}
