Done ex1 pdf 7; done usuari-nou, usuari

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -17,6 +17,18 @@
         {% endblock %}
     </head>
     <body>
+        {% block menu %}
+            <a href="/">Inici</a>
+            {% if is_granted('ROLE_ADMIN') %}
+                <a href="/llibre/nou">Nou Llibre</a>
+            {% endif %}
+            {% if is_granted('ROLE_ADMIN') %}
+                <a href="/usuari">Usuaris</a>
+            {% endif %}
+            {% if is_granted('IS_AUTHENTICATED_FULLY') %}
+                <span>Benvingut {{ app.user.username }}</span><a style="margin-left: 5px" href="/logout">Tancar sessió</a>
+            {% endif %}
+        {% endblock %}
         {% block body %}{% endblock %}
     </body>
 </html>
