--- a/templates/inici.html.twig
+++ b/templates/inici.html.twig
@@ -3,6 +3,7 @@
 
 {% block body %}
     <h1> Biblioteca Personal Andreu Furió </h1>
+    <h2>{{ data }}</h2>
     <p>
         Pàgina d'Inici<br>
         Projecte Symfony 2n DAW<br>
